kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-test2-s
  namespace: demo
spec:
  selector:
    app: kube-test2
  ports:
    - port: 8889
      targetPort: 80
  type: LoadBalancer
